--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -584,9 +584,6 @@ video {
 .left-\[0vw\] {
   left: 0vw;
 }
-.left-\[1\.06vw\] {
-  left: 1.06vw;
-}
 .left-\[1\.19vw\] {
   left: 1.19vw;
 }
@@ -623,8 +620,8 @@ video {
 .left-\[13\.568px\] {
   left: 13.568px;
 }
-.left-\[14\.75vw\] {
-  left: 14.75vw;
+.left-\[13\.56px\] {
+  left: 13.56px;
 }
 .left-\[16\.71\%\] {
   left: 16.71%;
@@ -649,6 +646,9 @@ video {
 }
 .left-\[19\.91vw\] {
   left: 19.91vw;
+}
+.left-\[190px\] {
+  left: 190px;
 }
 .left-\[2\.12vw\] {
   left: 2.12vw;
@@ -692,6 +692,9 @@ video {
 .left-\[21vw\] {
   left: 21vw;
 }
+.left-\[27\.136px\] {
+  left: 27.136px;
+}
 .left-\[32\.99\%\] {
   left: 32.99%;
 }
@@ -722,6 +725,9 @@ video {
 .left-\[42\.56\%\] {
   left: 42.56%;
 }
+.left-\[448px\] {
+  left: 448px;
+}
 .left-\[45\.66vw\] {
   left: 45.66vw;
 }
@@ -739,6 +745,12 @@ video {
 }
 .left-\[516\.352px\] {
   left: 516.352px;
+}
+.left-\[516\.35px\] {
+  left: 516.35px;
+}
+.left-\[516\.3px\] {
+  left: 516.3px;
 }
 .left-\[59\.79vw\] {
   left: 59.79vw;
@@ -802,6 +814,9 @@ video {
 }
 .left-\[calc\(50\%_-_2\.98vw\)\] {
   left: calc(50% - 2.98vw);
+}
+.left-\[calc\(50\%_-_247\.16px\)\] {
+  left: calc(50% - 247.16px);
 }
 .left-\[calc\(50\%_-_262\.4px\)\] {
   left: calc(50% - 262.4px);
@@ -917,9 +932,6 @@ video {
 .top-\[1\.06vw\] {
   top: 1.06vw;
 }
-.top-\[1\.19vw\] {
-  top: 1.19vw;
-}
 .top-\[1\.1vw\] {
   top: 1.1vw;
 }
@@ -935,8 +947,14 @@ video {
 .top-\[1\.85vw\] {
   top: 1.85vw;
 }
+.top-\[10\.11px\] {
+  top: 10.11px;
+}
 .top-\[10\.12vw\] {
   top: 10.12vw;
+}
+.top-\[10\.24px\] {
+  top: 10.24px;
 }
 .top-\[10\.45vw\] {
   top: 10.45vw;
@@ -956,6 +974,12 @@ video {
 .top-\[11\.9vw\] {
   top: 11.9vw;
 }
+.top-\[115\.2px\] {
+  top: 115.2px;
+}
+.top-\[116px\] {
+  top: 116px;
+}
 .top-\[13\.82vw\] {
   top: 13.82vw;
 }
@@ -967,6 +991,9 @@ video {
 }
 .top-\[14\.29vw\] {
   top: 14.29vw;
+}
+.top-\[15\.232px\] {
+  top: 15.232px;
 }
 .top-\[16\.57vw\] {
   top: 16.57vw;
@@ -1036,6 +1063,9 @@ video {
 }
 .top-\[3\.97vw\] {
   top: 3.97vw;
+}
+.top-\[30\.464px\] {
+  top: 30.464px;
 }
 .top-\[30\.46px\] {
   top: 30.46px;
@@ -1163,9 +1193,6 @@ video {
 .top-\[88\.89\%\] {
   top: 88.89%;
 }
-.top-\[9\.06vw\] {
-  top: 9.06vw;
-}
 .top-\[9\.13vw\] {
   top: 9.13vw;
 }
@@ -1202,6 +1229,9 @@ video {
 .top-\[calc\(50\%_-_1\.69vw\)\] {
   top: calc(50% - 1.69vw);
 }
+.top-\[calc\(50\%_-_176px\)\] {
+  top: calc(50% - 176px);
+}
 .top-\[calc\(50\%_-_24\.34vw\)\] {
   top: calc(50% - 24.34vw);
 }
@@ -1220,92 +1250,32 @@ video {
 .top-\[calc\(50\%_-_7\.68px\)\] {
   top: calc(50% - 7.68px);
 }
-.left-\[32\.128px\] {
-  left: 32.128px;
-}
-.top-\[137\.088\] {
-  top: 137.088;
-}
-.top-\[1\] {
-  top: 1;
-}
-.left-\[13\.56px\] {
-  left: 13.56px;
-}
-.left-\[190px\] {
-  left: 190px;
-}
-.top-\[10\.11px\] {
-  top: 10.11px;
-}
-.top-\[116px\] {
-  top: 116px;
-}
-.top-\[15\.232px\] {
-  top: 15.232px;
-}
-.left-\[30vw\] {
-  left: 30vw;
-}
-.top-\[20vw\] {
-  top: 20vw;
-}
-.left-\[calc\(50\%_-_20\.5vw\)\] {
-  left: calc(50% - 20.5vw);
-}
-.top-\[2\.38vw\] {
-  top: 2.38vw;
-}
-.left-\[40\.34vw\] {
-  left: 40.34vw;
-}
-.top-\[10vw\] {
-  top: 10vw;
-}
-.top-\[9vw\] {
-  top: 9vw;
-}
-.top-\[115\.2\] {
-  top: 115.2;
-}
-.top-\[30\.464px\] {
-  top: 30.464px;
-}
-.left-\[516\.35px\] {
-  left: 516.35px;
-}
-.top-\[115\.2px\] {
-  top: 115.2px;
-}
-.left-\[35vw\] {
-  left: 35vw;
-}
-.top-\[0\.8vw\] {
-  top: 0.8vw;
-}
 .top-\[calc\(50\%_-_13\.72vw\)\] {
   top: calc(50% - 13.72vw);
 }
-.left-\[27\.136px\] {
-  left: 27.136px;
+.left-\[34\.72vw\] {
+  left: 34.72vw;
 }
-.left-\[448px\] {
-  left: 448px;
+.top-\[calc\(50\%_-_175\.6px\)\] {
+  top: calc(50% - 175.6px);
 }
-.top-\[10\.24px\] {
-  top: 10.24px;
+.left-\[444\.416px\] {
+  left: 444.416px;
 }
-.top-\[calc\(50\%_-_176px\)\] {
-  top: calc(50% - 176px);
+.top-\[20\.35px\] {
+  top: 20.35px;
 }
-.left-\[calc\(50\%_-_19\.31vw\)\] {
-  left: calc(50% - 19.31vw);
+.top-\[calc\(50\%_-_17\.6px\)\] {
+  top: calc(50% - 17.6px);
 }
-.left-\[516\.3px\] {
-  left: 516.3px;
+.top-\[calc\(50\%_-_165\.6px\)\] {
+  top: calc(50% - 165.6px);
 }
-.left-\[calc\(50\%_-_247\.16px\)\] {
-  left: calc(50% - 247.16px);
+.top-\[calc\(50\%_-_180\.6px\)\] {
+  top: calc(50% - 180.6px);
+}
+.top-\[calc\(50\%_-_200\.6px\)\] {
+  top: calc(50% - 200.6px);
 }
 .z-0 {
   z-index: 0;
@@ -1404,6 +1374,9 @@ video {
 .mt-\[-6\.784px\] {
   margin-top: -6.784px;
 }
+.mt-\[-6\.78px\] {
+  margin-top: -6.78px;
+}
 .mt-\[-6\.8px\] {
   margin-top: -6.8px;
 }
@@ -1424,9 +1397,6 @@ video {
 }
 .mt-\[6\.784px\] {
   margin-top: 6.784px;
-}
-.mt-\[-6\.78px\] {
-  margin-top: -6.78px;
 }
 .box-border {
   box-sizing: border-box;
@@ -1485,6 +1455,9 @@ video {
 .h-\[1\.59vw\] {
   height: 1.59vw;
 }
+.h-\[1\.67px\] {
+  height: 1.67px;
+}
 .h-\[1\.6vw\] {
   height: 1.6vw;
 }
@@ -1533,6 +1506,9 @@ video {
 .h-\[13\.56px\] {
   height: 13.56px;
 }
+.h-\[13\.5px\] {
+  height: 13.5px;
+}
 .h-\[14\.336px\] {
   height: 14.336px;
 }
@@ -1544,6 +1520,9 @@ video {
 }
 .h-\[156\.672px\] {
   height: 156.672px;
+}
+.h-\[16\.9px\] {
+  height: 16.9px;
 }
 .h-\[17\.46vw\] {
   height: 17.46vw;
@@ -1599,6 +1578,12 @@ video {
 .h-\[2\.78vw\] {
   height: 2.78vw;
 }
+.h-\[20\.352px\] {
+  height: 20.352px;
+}
+.h-\[20\.35px\] {
+  height: 20.35px;
+}
 .h-\[21\.36vw\] {
   height: 21.36vw;
 }
@@ -1653,6 +1638,9 @@ video {
 .h-\[3\.89vw\] {
   height: 3.89vw;
 }
+.h-\[30\.128px\] {
+  height: 30.128px;
+}
 .h-\[31\.15vw\] {
   height: 31.15vw;
 }
@@ -1680,6 +1668,12 @@ video {
 .h-\[348\.8px\] {
   height: 348.8px;
 }
+.h-\[35px\] {
+  height: 35px;
+}
+.h-\[375\.9px\] {
+  height: 375.9px;
+}
 .h-\[38\.144px\] {
   height: 38.144px;
 }
@@ -1688,6 +1682,9 @@ video {
 }
 .h-\[4\.06vw\] {
   height: 4.06vw;
+}
+.h-\[404px\] {
+  height: 404px;
 }
 .h-\[40vw\] {
   height: 40vw;
@@ -1758,6 +1755,9 @@ video {
 .h-\[64\.95vw\] {
   height: 64.95vw;
 }
+.h-\[650px\] {
+  height: 650px;
+}
 .h-\[66\.67\%\] {
   height: 66.67%;
 }
@@ -1766,6 +1766,9 @@ video {
 }
 .h-\[720\.112px\] {
   height: 720.112px;
+}
+.h-\[73\.6px\] {
+  height: 73.6px;
 }
 .h-\[76\.16px\] {
   height: 76.16px;
@@ -1806,71 +1809,26 @@ video {
 .h-screen {
   height: 100vh;
 }
-.h-\[16\.9px\] {
-  height: 16.9px;
+.h-\[0\.2vw\] {
+  height: 0.2vw;
 }
-.h-\[30\.128px\] {
-  height: 30.128px;
+.h-\[403\.84px\] {
+  height: 403.84px;
 }
-.h-\[44\.71vw\] {
-  height: 44.71vw;
+.h-\[2\.56px\] {
+  height: 2.56px;
 }
-.h-\[5\.75vw\] {
-  height: 5.75vw;
+.h-\[450\.84px\] {
+  height: 450.84px;
 }
-.h-\[47\.71vw\] {
-  height: 47.71vw;
+.h-\[470\.84px\] {
+  height: 470.84px;
 }
-.h-\[46\.71vw\] {
-  height: 46.71vw;
+.h-\[500\.84px\] {
+  height: 500.84px;
 }
-.h-\[597px\] {
-  height: 597px;
-}
-.h-\[73\.6px\] {
-  height: 73.6px;
-}
-.h-\[600px\] {
-  height: 600px;
-}
-.h-\[650px\] {
-  height: 650px;
-}
-.h-\[2\.71vw\] {
-  height: 2.71vw;
-}
-.h-\[40\.55vw\] {
-  height: 40.55vw;
-}
-.h-\[400\.55vw\] {
-  height: 400.55vw;
-}
-.h-\[0\.13vw\] {
-  height: 0.13vw;
-}
-.h-\[1\.67px\] {
-  height: 1.67px;
-}
-.h-\[13\.5px\] {
-  height: 13.5px;
-}
-.h-\[35px\] {
-  height: 35px;
-}
-.h-\[404px\] {
-  height: 404px;
-}
-.h-\[29\.37vw\] {
-  height: 29.37vw;
-}
-.h-\[20\.352px\] {
-  height: 20.352px;
-}
-.h-\[20\.35px\] {
-  height: 20.35px;
-}
-.h-\[375\.9px\] {
-  height: 375.9px;
+.h-\[550\.84px\] {
+  height: 550.84px;
 }
 .max-h-80 {
   max-height: 20rem;
@@ -1947,6 +1905,9 @@ video {
 .w-\[13\.56px\] {
   width: 13.56px;
 }
+.w-\[13\.5px\] {
+  width: 13.5px;
+}
 .w-\[134\.656px\] {
   width: 134.656px;
 }
@@ -1965,14 +1926,14 @@ video {
 .w-\[14\.86vw\] {
   width: 14.86vw;
 }
-.w-\[14\.87vw\] {
-  width: 14.87vw;
-}
 .w-\[14\.8vw\] {
   width: 14.8vw;
 }
 .w-\[14\.91vw\] {
   width: 14.91vw;
+}
+.w-\[140px\] {
+  width: 140px;
 }
 .w-\[15\.28vw\] {
   width: 15.28vw;
@@ -1988,6 +1949,9 @@ video {
 }
 .w-\[16\.72vw\] {
   width: 16.72vw;
+}
+.w-\[16\.9px\] {
+  width: 16.9px;
 }
 .w-\[17\.33vw\] {
   width: 17.33vw;
@@ -2016,6 +1980,9 @@ video {
 .w-\[19\.31vw\] {
   width: 19.31vw;
 }
+.w-\[190\.3px\] {
+  width: 190.3px;
+}
 .w-\[2\.12vw\] {
   width: 2.12vw;
 }
@@ -2036,6 +2003,12 @@ video {
 }
 .w-\[20\.24vw\] {
   width: 20.24vw;
+}
+.w-\[20\.352px\] {
+  width: 20.352px;
+}
+.w-\[20\.35px\] {
+  width: 20.35px;
 }
 .w-\[21\.1vw\] {
   width: 21.1vw;
@@ -2202,6 +2175,9 @@ video {
 .w-\[40vw\] {
   width: 40vw;
 }
+.w-\[437\.632px\] {
+  width: 437.632px;
+}
 .w-\[444\.4px\] {
   width: 444.4px;
 }
@@ -2213,6 +2189,15 @@ video {
 }
 .w-\[47\.82vw\] {
   width: 47.82vw;
+}
+.w-\[491\.9px\] {
+  width: 491.9px;
+}
+.w-\[494\.336px\] {
+  width: 494.336px;
+}
+.w-\[494px\] {
+  width: 494px;
 }
 .w-\[4vw\] {
   width: 4vw;
@@ -2244,6 +2229,9 @@ video {
 .w-\[512px\] {
   width: 512px;
 }
+.w-\[524\.92px\] {
+  width: 524.92px;
+}
 .w-\[525\.6px\] {
   width: 525.6px;
 }
@@ -2252,6 +2240,9 @@ video {
 }
 .w-\[567\.16px\] {
   width: 567.16px;
+}
+.w-\[568px\] {
+  width: 568px;
 }
 .w-\[6\.44vw\] {
   width: 6.44vw;
@@ -2325,6 +2316,9 @@ video {
 .w-\[8\.99vw\] {
   width: 8.99vw;
 }
+.w-\[80px\] {
+  width: 80px;
+}
 .w-\[81\.28px\] {
   width: 81.28px;
 }
@@ -2343,71 +2337,20 @@ video {
 .w-full {
   width: 100%;
 }
-.w-\[190\.3px\] {
-  width: 190.3px;
-}
-.w-\[16\.9px\] {
-  width: 16.9px;
-}
-.w-\[180\.3px\] {
-  width: 180.3px;
-}
-.w-\[44\.31vw\] {
-  width: 44.31vw;
-}
-.w-\[41\.01vw\] {
-  width: 41.01vw;
-}
-.w-\[524\.92px\] {
-  width: 524.92px;
-}
-.w-\[568px\] {
-  width: 568px;
-}
 .w-\[38\.43vw\] {
   width: 38.43vw;
-}
-.w-\[6\.22vw\] {
-  width: 6.22vw;
 }
 .w-\[34\.19vw\] {
   width: 34.19vw;
 }
-.w-\[11vw\] {
-  width: 11vw;
-}
 .w-\[10\.52vw\] {
   width: 10.52vw;
 }
-.w-\[13\.5px\] {
-  width: 13.5px;
+.w-\[134\.65px\] {
+  width: 134.65px;
 }
-.w-\[140px\] {
-  width: 140px;
-}
-.w-\[437\.632px\] {
-  width: 437.632px;
-}
-.w-\[491\.9px\] {
-  width: 491.9px;
-}
-.w-\[80px\] {
-  width: 80px;
-}
-.w-\[38\.62vw\] {
-  width: 38.62vw;
-}
-.w-\[20\.352px\] {
-  width: 20.352px;
-}
-.w-\[20\.35px\] {
-  width: 20.35px;
-}
-.w-\[494\.336px\] {
-  width: 494.336px;
-}
-.w-\[494px\] {
-  width: 494px;
+.w-\[500\.9px\] {
+  width: 500.9px;
 }
 .max-w-full {
   max-width: 100%;
@@ -2604,6 +2547,9 @@ video {
 .gap-\[var\(--gap-36xl-login\)\] {
   gap: var(--gap-36xl-login);
 }
+.gap-\[var\(--gap-37xl\)\] {
+  gap: var(--gap-37xl);
+}
 .gap-\[var\(--gap-37xl-login\)\] {
   gap: var(--gap-37xl-login);
 }
@@ -2681,9 +2627,6 @@ video {
 }
 .gap-\[var\(--gap-xs-login\)\] {
   gap: var(--gap-xs-login);
-}
-.gap-\[var\(--gap-37xl\)\] {
-  gap: var(--gap-37xl);
 }
 .overflow-auto {
   overflow: auto;
@@ -2837,6 +2780,9 @@ video {
 .border-\[color\:var\(--icon-grey\)\] {
   border-color: var(--icon-grey);
 }
+.border-\[color\:var\(--incomplete\)\] {
+  border-color: var(--incomplete);
+}
 .border-\[color\:var\(--purple\)\] {
   border-color: var(--purple);
 }
@@ -2851,9 +2797,6 @@ video {
 }
 .border-\[rgba\(33-login\2c 33-login\2c 33-login\2c 0\.8\)\] {
   border-color: rgba(33-login,33-login,33-login,0.8);
-}
-.border-\[color\:var\(--incomplete\)\] {
-  border-color: var(--incomplete);
 }
 .border-t-\[color\:black\] {
   --tw-border-opacity: 1;
@@ -2925,6 +2868,9 @@ video {
 .bg-\[color\:var\(--color-sandybrown-100\)\] {
   background-color: var(--color-sandybrown-100);
 }
+.bg-\[color\:var\(--color-sandybrown-200\)\] {
+  background-color: var(--color-sandybrown-200);
+}
 .bg-\[color\:var\(--color-white-login\)\] {
   background-color: var(--color-white-login);
 }
@@ -2959,9 +2905,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-\[color\:var\(--color-sandybrown-200\)\] {
-  background-color: var(--color-sandybrown-200);
 }
 .bg-cover {
   background-size: cover;
@@ -3267,15 +3210,15 @@ video {
 .text-\[length\:var\(--h1-heavy-size-login\)\] {
   font-size: var(--h1-heavy-size-login);
 }
+.text-\[medium\] {
+  font-size: medium;
+}
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
 }
 .text-\[1\.56vw\] {
   font-size: 1.56vw;
-}
-.text-\[medium\] {
-  font-size: medium;
 }
 .lowercase {
   text-transform: lowercase;
@@ -3286,11 +3229,14 @@ video {
 .leading-\[1\.06vw\] {
   line-height: 1.06vw;
 }
-.leading-\[1\.16vw\] {
-  line-height: 1.16vw;
-}
 .leading-\[1\.59vw\] {
   line-height: 1.59vw;
+}
+.leading-\[14\.84px\] {
+  line-height: 14.84px;
+}
+.leading-\[14\.8px\] {
+  line-height: 14.8px;
 }
 .leading-\[15px\] {
   line-height: 15px;
@@ -3307,20 +3253,17 @@ video {
 .leading-\[35\.58px\] {
   line-height: 35.58px;
 }
-.leading-\[14\.84px\] {
-  line-height: 14.84px;
-}
-.leading-\[14\.8px\] {
-  line-height: 14.8px;
-}
 .leading-\[35\.5px\] {
   line-height: 35.5px;
+}
+.leading-\[35\.6px\] {
+  line-height: 35.6px;
 }
 .leading-\[2\.38vw\] {
   line-height: 2.38vw;
 }
-.leading-\[35\.6px\] {
-  line-height: 35.6px;
+.leading-\[30\.5px\] {
+  line-height: 30.5px;
 }
 .tracking-\[-0\.02em\] {
   letter-spacing: -0.02em;
@@ -3394,6 +3337,9 @@ video {
 .text-\[color\:var\(--icon-grey-login\)\] {
   color: var(--icon-grey-login);
 }
+.text-\[color\:var\(--incomplete\)\] {
+  color: var(--incomplete);
+}
 .text-\[color\:var\(--light-base-chart-title\)\] {
   color: var(--light-base-chart-title);
 }
@@ -3422,9 +3368,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-\[color\:var\(--incomplete\)\] {
-  color: var(--incomplete);
 }
 .underline {
   text-decoration-line: underline;
@@ -3480,11 +3423,6 @@ video {
 .shadow-\[0\.07vw_0_0\.26vw_rgba\(0\2c 0\2c 0\2c 0\.15\)\] {
   --tw-shadow: 0.07vw 0 0.26vw rgba(0,0,0,0.15);
   --tw-shadow-colored: 0.07vw 0 0.26vw var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.shadow-\[0_0\.07vw_0\.07vw_rgba\(0\2c 0\2c 0\2c 0\.03\)\] {
-  --tw-shadow: 0 0.07vw 0.07vw rgba(0,0,0,0.03);
-  --tw-shadow-colored: 0 0.07vw 0.07vw var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-\[0_0\.13vw_0\.13vw_rgba\(0\2c 0\2c 0\2c 0\.1\)\] {
