--- a/src/components/AddStudentsManualPopup/AddStudentsManualPopup.css
+++ b/src/components/AddStudentsManualPopup/AddStudentsManualPopup.css
@@ -1,140 +1,74 @@
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
 .add-students1 {
-  position: relative;
-  letter-spacing: -0.02em;
-  line-height: 2.78vw;
-  font-weight: bold;
-  }
-
+  @apply relative tracking-[-0.02em] leading-[2.78vw] font-[bold];
+}
 .upload-list-of1 {
-      position: relative;
-      letter-spacing: -0.02em;
-      line-height: 2.78vw;
-      }    
-.upload-list-of1 {
-  font-size: var(--font-size-lg);
-  color: var(--icon-grey);
-  margin-top: -0.53vw
-  }
+  @apply relative tracking-[-0.02em] leading-[2.78vw] text-[length:var(--font-size-lg)] text-[color:var(--icon-grey)] mt-[-0.53vw];
+}
 .add-students-group {
-  flex-direction: column;
-  align-items: flex-start
-  }
-.add-students-group, .frame-input, .name-group {
-  display: flex;
-  justify-content: flex-start
-  }
-.frame-input {
-  border: 0.07vw solid var(--color-gainsboro-400);
-  font-family: var(--font-avenir-lt-std);
-  font-size: var(--font-size-xl);
-  background-color: transparent;
-  border-radius: var(--br-xs);
-  box-sizing: border-box;
-  width: 20.11vw;
-  flex-direction: row;
-  align-items: center;
-  padding: var(--padding-base) var(--padding-5xl)
-  }
+  @apply flex-col items-start;
+}
+.add-students-group,
+.frame-input,
 .name-group {
-  flex-direction: column;
-  align-items: flex-start;
-  gap: var(--gap-xs)
-  }
+  @apply flex justify-start;
+}
+.frame-input {
+  @apply border-[color:var(--color-gainsboro-400)] text-[length:var(--font-size-xl)] bg-transparent rounded-[var(--br-xs)] box-border w-[20.11vw] flex-row items-center pt-[var(--padding-base)] pr-[var(--padding-5xl)] pb-[var(--padding-base)] pl-[var(--padding-5xl)] border-[0.07vw] border-solid;
+  font-family: var(--font-avenir-lt-std);
+}
+.name-group {
+  @apply flex-col items-start gap-[var(--gap-xs)];
+}
 .email {
-  position: relative
-  }
-.frame-parent24, .frame-parent25, .frame-wrapper14 {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start
-  }
-.frame-parent25 {
-  flex-direction: row;
-  gap: var(--gap-xs)
-  }
-.frame-parent24, .frame-wrapper14 {
-  flex-direction: column
-  }
+  @apply relative;
+}
+.frame-parent24,
+.frame-parent25,
 .frame-wrapper14 {
-  font-size: var(--font-size-lg)
-  }
+  @apply flex items-start justify-start;
+}
+.frame-parent25 {
+  @apply flex-row gap-[var(--gap-xs)];
+}
+.frame-parent24,
+.frame-wrapper14 {
+  @apply flex-col;
+}
+.frame-wrapper14 {
+  @apply text-[length:var(--font-size-lg)];
+}
 .frame-parent24 {
-  gap: var(--gap-lg)
-  }
+  @apply gap-[var(--gap-lg)];
+}
 .send-invite {
-  position: relative;
-  font-size: var(--font-size-xl);
+  @apply relative text-[length:var(--font-size-xl)] text-[color:var(--white)] text-left font-[bold];
   font-family: var(--font-avenir-lt-std);
-  color: var(--white);
-  text-align: left;
-  font-weight: bold;
-  }
+}
 .send-invite-wrapper {
-  border-radius: var(--br-5xs);
-  background-color: var(--purple);
-  overflow: hidden;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding: var(--padding-base) var(--padding-xl)
-  }
-.frame-parent23, .frame-wrapper15 {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start
-  }
+  @apply rounded-[var(--br-5xs)] bg-[color:var(--purple)] overflow-hidden flex flex-row items-center justify-center pt-[var(--padding-base)] pr-[var(--padding-xl)] pb-[var(--padding-base)] pl-[var(--padding-xl)];
+}
+.frame-parent23,
 .frame-wrapper15 {
-  cursor: pointer;
-  border: 0;
-  padding: 0;
-  background-color: transparent;
-  flex-direction: row
-  }
+  @apply flex items-start justify-start;
+}
+.frame-wrapper15 {
+  @apply cursor-pointer bg-transparent flex-row p-0 border-0;
+}
 .frame-parent23 {
-  position: absolute;
-  top: 2.25vw;
-  left: calc(50% - 20.5vw);
-  flex-direction: column;
-  gap: var(--gap-13xl)
-  }
+  @apply absolute left-[calc(50%_-_20.5vw)] flex-col gap-[var(--gap-13xl)] top-[2.25vw];
+}
 .vector-icon6 {
-  position: absolute;
-  height: 34%;
-  width: 34.01%;
-  top: 32.99%;
-  right: 33%;
-  bottom: 33%;
-  left: 32.99%;
-  max-width: 100%;
-  overflow: hidden;
-  max-height: 100%
-  }
+  @apply absolute h-[34%] w-[34.01%] max-w-full overflow-hidden max-h-full left-[32.99%] right-[33%] top-[32.99%] bottom-[33%];
+}
 .basilcross-outline4 {
-  cursor: pointer;
-  border: 0;
-  padding: 0;
-  background-color: transparent;
-  position: absolute;
-  top: 2.12vw;
-  left: 40.34vw;
-  width: 2.12vw;
-  height: 2.12vw;
-  overflow: hidden
-  }
+  @apply cursor-pointer bg-transparent absolute w-[2.12vw] h-[2.12vw] overflow-hidden p-0 border-0 left-[40.34vw] top-[2.12vw];
+}
 .addstudentsmanualpopup {
-  border-radius: var(--br-base);
-  background-color: var(--white);
-  width: 44.31vw;
-  height: 22.69vw;
-  overflow: hidden;
-  max-width: 100%;
-  max-height: 100%;
-  text-align: left;
-  font-size: 1.56vw;
-  color: var(--black);
+  @apply rounded-[var(--br-base)] bg-[color:var(--white)] w-[44.31vw] h-[22.69vw] overflow-hidden max-w-full max-h-full text-left text-[1.56vw] text-[color:var(--black)] absolute left-[30vw] top-[20vw];
   font-family: var(--font-avenir-lt-std);
-  position: absolute;
-  top: 20vw;
-  left: 30vw;
-  }
+}
