14th popup done

--- a/src/components/PortalPopup/PortalPopup.css
+++ b/src/components/PortalPopup/PortalPopup.css
@@ -1,6 +1,3 @@
 .portalPopupOverlay {
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  inset: 0
-  }
+  @apply flex flex-col fixed inset-0;
+}
