--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -515,11 +515,17 @@ video {
     max-width: 1536px;
   }
 }
+.fixed {
+  position: fixed;
+}
 .absolute {
   position: absolute;
 }
 .relative {
   position: relative;
+}
+.inset-0 {
+  inset: 0px;
 }
 .inset-x-\[32\.99\%\] {
   left: 32.99%;
